--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 
 <body>
   <h1>ようこそ！</h1>
+  <p>忍殺語を入力してOKを押すとけものフレンズっぽくなります。</p>
   <textarea name="input" id="input" rows="8" cols="80"></textarea>
   <br>
   <button type="button" id="button">OK</button>
